Add opening screen

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Caveat:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Opening Overlay -->
+    <div class="opening-overlay" id="openingOverlay">
+        <div class="overlay-content">
+            <h1 class="overlay-title">Special Greeting</h1>
+            <p class="overlay-subtitle">For someone very special</p>
+            <button class="open-card-btn" id="openCardBtn">Open Greeting Card</button>
+        </div>
+    </div>
     <!-- Floating elements for animation -->
     <div class="floating-element element-1"></div>
     <div class="floating-element element-2"></div>
