--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Caveat:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Hidden Music Player -->
+    <audio id="birthdayMusic" loop preload="auto">
+        <source src="assets/music/Marshmello ft. Bastille - Happier (Official Lyric Video).mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+    
+    <!-- Mute Button -->
+    <button id="muteBtn" class="mute-btn">
+        <span class="mute-icon">🔊</span>
+    </button>
+    
     <!-- Opening Overlay -->
     <div class="opening-overlay" id="openingOverlay">
         <div class="overlay-content">
