Add several assets

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="opening-overlay" id="openingOverlay">
         <div class="overlay-content">
             <h1 class="overlay-title">Special Greeting</h1>
-            <p class="overlay-subtitle">For someone very special</p>
+            <p class="overlay-subtitle">For Ari Anna's Birthday.. 🎈🎉</p>
             <button class="open-card-btn" id="openCardBtn">Open Greeting Card</button>
         </div>
     </div>
@@ -38,8 +38,10 @@
     <!-- Hero Section -->
     <header class="hero-section">
         <div class="hero-content">
-            <h1 class="birthday-title rainbow-text glow" id="title">Happy Birthday!</h1>
-            <p class="subtitle">A special celebration for someone special</p>
+            <div class="txt-glow-div glow">
+                <h1 class="birthday-title rainbow-text" id="title">Happy Birthday, luuv! 💖</h1>
+            </div>
+            <p class="subtitle">A special celebration for Ari Anna 🥳🥳</p>
             <div class="balloon-container">
                 <div class="balloon balloon-1 heartbeat">🎈</div>
                 <div class="balloon balloon-2">🎉</div>
@@ -70,7 +72,7 @@
     <!-- About Section -->
     <section id="about" class="section about-section">
         <div class="container">
-            <h2 class="section-title">Our Journey Together</h2>
+            <h2 class="section-title">My Dear..</h2>
             <div class="about-content">
                 <div class="about-text">
                     <p>Every moment with you has been a treasure. The laughter, the adventures, the quiet moments - all of these have made my life more beautiful.</p>
@@ -79,16 +81,25 @@
                 <div class="photo-gallery">
                     <!-- Photo placeholders - Replace with your own images -->
                     <div class="photo-placeholder">
-                        <!-- TODO: Replace with actual image - Photo of you two together -->
-                        <div class="placeholder-text">Photo Placeholder</div>
+                         <img src="assets\img\20191106_184906.jpg" alt="" srcset="">
                     </div>
                     <div class="photo-placeholder">
-                        <!-- TODO: Replace with actual image - Another memory -->
-                        <div class="placeholder-text">Photo Placeholder</div>
+                        <img src="assets\img\IMG-20220912-WA0001.jpg" alt="" srcset="">
                     </div>
                     <div class="photo-placeholder">
-                        <!-- TODO: Replace with actual image - Special moment -->
-                        <div class="placeholder-text">Photo Placeholder</div>
+                        <img src="assets\img\IMG-20201028-WA0038.jpg" alt="" srcset="">
+                    </div>
+                    <div class="photo-placeholder">
+                        <img src="assets\img\IMG-20200109-WA0004.jpg" alt="" srcset="">
+                    </div>
+                    <div class="photo-placeholder">
+                        <img src="assets\img\IMG-20191224-WA0007.jpg" alt="" srcset="">
+                    </div>
+                    <div class="photo-placeholder">
+                        <img src="assets\img\20200222_214506.jpg" alt="" srcset="">
+                    </div>
+                    <div class="photo-placeholder">
+                        <img src="assets\img\20200304_203525.jpg" alt="" srcset="">
                     </div>
                 </div>
             </div>
@@ -102,31 +113,24 @@
             <div class="memories-grid">
                 <div class="memory-card">
                     <div class="memory-placeholder">
-                        <!-- TODO: Replace with actual image - Memory 1 -->
-                        <div class="placeholder-text">Memory 1</div>
+                        <img src="assets\img\IMG-20230205-WA0003.jpg" alt="" srcset="">
                     </div>
-                    <p>Our first meeting</p>
                 </div>
                 <div class="memory-card">
                     <div class="memory-placeholder">
-                        <!-- TODO: Replace with actual image - Memory 2 -->
-                        <div class="placeholder-text">Memory 2</div>
+                        <img src="assets\img\Untitled.gif" alt="" srcset="">
                     </div>
-                    <p>Our first date</p>
                 </div>
                 <div class="memory-card">
                     <div class="memory-placeholder">
-                        <!-- TODO: Replace with actual image - Memory 3 -->
-                        <div class="placeholder-text">Memory 3</div>
+                        <img src="assets\img\IMG-20201115-WA0000.jpg" alt="" srcset="">
                     </div>
                     <p>That special trip</p>
                 </div>
                 <div class="memory-card">
                     <div class="memory-placeholder">
-                        <!-- TODO: Replace with actual image - Memory 4 -->
-                        <div class="placeholder-text">Memory 4</div>
+                        <img src="assets\img\IMG-20201115-WA0004.jpg" alt="" srcset="">
                     </div>
-                    <p>Your achievement</p>
                 </div>
             </div>
         </div>
@@ -138,7 +142,7 @@
             <h2 class="section-title">A Special Message</h2>
             <div class="video-container">
                 <video id="birthday-video">
-                    <source src="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" type="video/mp4">
+                    <source src="assets\vid\VID-20200407-WA0037.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="video-controls">
@@ -147,7 +151,7 @@
                     <button id="volume-btn">🔊</button>
                     <input type="range" id="volume-bar" min="0" max="1" step="0.1" value="1">
                 </div>
-                <p>Watch this special message I've prepared for you!</p>
+                <!-- <p>Watch this special message I've prepared for you!</p> -->
             </div>
         </div>
     </section>
