Fixing vercel routes and changing backslash to slash for src path

--- a/index.html
+++ b/index.html
@@ -81,25 +81,25 @@
                 <div class="photo-gallery">
                     <!-- Photo placeholders - Replace with your own images -->
                     <div class="photo-placeholder">
-                         <img src="assets\img\20191106_184906.jpg" alt="" srcset="">
+                         <img src="assets/img/20191106_184906.jpg" alt="" srcset="">
                     </div>
                     <div class="photo-placeholder">
-                        <img src="assets\img\IMG-20220912-WA0001.jpg" alt="" srcset="">
+                        <img src="assets/img/IMG-20220912-WA0001.jpg" alt="" srcset="">
                     </div>
                     <div class="photo-placeholder">
-                        <img src="assets\img\IMG-20201028-WA0038.jpg" alt="" srcset="">
+                        <img src="assets/img/IMG-20201028-WA0038.jpg" alt="" srcset="">
                     </div>
                     <div class="photo-placeholder">
-                        <img src="assets\img\IMG-20200109-WA0004.jpg" alt="" srcset="">
+                        <img src="assets/img/IMG-20200109-WA0004.jpg" alt="" srcset="">
                     </div>
                     <div class="photo-placeholder">
-                        <img src="assets\img\IMG-20191224-WA0007.jpg" alt="" srcset="">
+                        <img src="assets/img/IMG-20191224-WA0007.jpg" alt="" srcset="">
                     </div>
                     <div class="photo-placeholder">
-                        <img src="assets\img\20200222_214506.jpg" alt="" srcset="">
+                        <img src="assets/img/20200222_214506.jpg" alt="" srcset="">
                     </div>
                     <div class="photo-placeholder">
-                        <img src="assets\img\20200304_203525.jpg" alt="" srcset="">
+                        <img src="assets/img/20200304_203525.jpg" alt="" srcset="">
                     </div>
                 </div>
             </div>
@@ -113,23 +113,23 @@
             <div class="memories-grid">
                 <div class="memory-card">
                     <div class="memory-placeholder">
-                        <img src="assets\img\IMG-20230205-WA0003.jpg" alt="" srcset="">
+                        <img src="assets/img/IMG-20230205-WA0003.jpg" alt="" srcset="">
                     </div>
                 </div>
                 <div class="memory-card">
                     <div class="memory-placeholder">
-                        <img src="assets\img\Untitled.gif" alt="" srcset="">
+                        <img src="assets/img/Untitled.gif" alt="" srcset="">
                     </div>
                 </div>
                 <div class="memory-card">
                     <div class="memory-placeholder">
-                        <img src="assets\img\IMG-20201115-WA0000.jpg" alt="" srcset="">
+                        <img src="assets/img/IMG-20201115-WA0000.jpg" alt="" srcset="">
                     </div>
                     <p>That special trip</p>
                 </div>
                 <div class="memory-card">
                     <div class="memory-placeholder">
-                        <img src="assets\img\IMG-20201115-WA0004.jpg" alt="" srcset="">
+                        <img src="assets/img/IMG-20201115-WA0004.jpg" alt="" srcset="">
                     </div>
                 </div>
             </div>
@@ -142,7 +142,7 @@
             <h2 class="section-title">A Special Message</h2>
             <div class="video-container">
                 <video id="birthday-video">
-                    <source src="assets\vid\VID-20200407-WA0037.mp4" type="video/mp4">
+                    <source src="assets/vid/VID-20200407-WA0037.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="video-controls">
