Add new content in hero section

--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
     <!-- Hero Section -->
     <header class="hero-section">
         <div class="hero-content">
-            <div class="txt-glow-div glow">
-                <h1 class="birthday-title rainbow-text" id="title">Happy Birthday, luuv! 💖</h1>
-            </div>
             <p class="subtitle">A special celebration for Ari Anna 🥳🥳</p>
             <div class="balloon-container">
                 <div class="balloon balloon-1 heartbeat">🎈</div>
@@ -48,6 +45,12 @@
                 <div class="balloon balloon-3">💖</div>
                 <div class="balloon balloon-4">🌟</div>
                 <div class="balloon balloon-5">💝</div>
+            </div>
+            <div class="hbd-image-container">
+                <img src="assets/img/HBD-Give.png" alt="Happy Birthday Greeting" class="hbd-image">
+            </div>
+            <div class="txt-glow-div glow">
+                <h1 class="birthday-title rainbow-text" id="title">Happy Birthday, luuv! 💖</h1>
             </div>
         </div>
     </header>
