--- a/index.html
+++ b/index.html
@@ -237,8 +237,9 @@
                 <p class="">
                     Barakallahu fii umrik, sayaaang❤️🤍💚💛 <br>
                     Sehat dan berkah terus yaa sayang, panjang umur, lancar rezekinya, makin pinter dan rajin ibadahnyaa, Aamiin 🤲..
-                    Selalu jadi kesayangan aku yang gemoy dan humble yaa. Thanks udah nemenin sampe sekarang😘
-                    Maaf kalo belum bisa jadi yang terbaik buat kamu yaa, hehehe. Love youu, mochioo💘. U're SO KIND🤗
+                    Selalu jadi kesayangan aku yang gemoy dan humble yaa. Thanks udah nemenin sampe sekarang😘 <br>
+                    Maaf kalo belum bisa jadi yang terbaik buat kamu yaa, hehehe. <br>
+                    Love youu, mochioo💘. U're SO KIND🤗
                 </p>
                 <blockquote class="italic text-lg text-pink-200 border-l-4 border-pink-400 pl-4 my-6">
                     “Kamu nggak perlu jadi sempurna, cukup jadi versi terbaik dari dirimu sendiri 💖”
@@ -254,11 +255,23 @@
                 <div class="custom-card fade-in-section"><img src="assets/img/IMG-20230205-WA0003.jpg" alt="Kenangan 1"></div>
                 <div class="custom-card fade-in-section" style="transition-delay: 100ms;"><img src="assets/img/Untitled.gif" alt="Kenangan 2"></div>
                 <div class="custom-card fade-in-section" style="transition-delay: 200ms;"><img src="assets/img/IMG-20201115-WA0000.jpg" alt="Kenangan 3"></div>
-                <div class="custom-card fade-in-section" style="transition-delay: 300ms;"><img src="assets/img/IMG-20201115-WA0004.jpg" alt="Kenangan 4"></div>
+                <div class="custom-card fade-in-section" style="transition-delay: 300ms;"><img src="assets/img/IMG-20200915-WA0012.jpg" alt="Kenangan 4"></div>
                 <div class="custom-card fade-in-section" style="transition-delay: 400ms;"><img src="assets/img/20191106_184906.jpg" alt="Kenangan 5"></div>
                 <div class="custom-card fade-in-section" style="transition-delay: 500ms;"><img src="assets/img/IMG-20220912-WA0001.jpg" alt="Kenangan 6"></div>
                 <div class="custom-card fade-in-section" style="transition-delay: 600ms;"><img src="assets/img/IMG-20201028-WA0038.jpg" alt="Kenangan 7"></div>
                 <div class="custom-card fade-in-section" style="transition-delay: 700ms;"><img src="assets/img/IMG-20210723-WA0079.jpg" alt="Kenangan 8"></div>
+                <div class="custom-card fade-in-section" style="transition-delay: 700ms;"><img src="assets/img/IMG-20200109-WA0001.jpg" alt="Kenangan 9"></div>
+                <div class="custom-card fade-in-section" style="transition-delay: 700ms;"><img src="assets/img/IMG-20200117-WA0004.jpg" alt="Kenangan 10"></div>
+                <div class="custom-card fade-in-section" style="transition-delay: 700ms;"><img src="assets/img/IMG-20200117-WA0047.jpg" alt="Kenangan 11"></div>
+                <div class="custom-card fade-in-section" style="transition-delay: 700ms;"><img src="assets/img/IMG-20200913-WA0009.jpg" alt="Kenangan 12"></div>
+                <div class="custom-card fade-in-section" style="transition-delay: 700ms;"><img src="assets/img/IMG-20201028-WA0037.jpg" alt="Kenangan 13"></div>
+                <div class="custom-card fade-in-section" style="transition-delay: 700ms;"><img src="assets/img/IMG-20201209-WA0033.jpg" alt="Kenangan 14"></div>
+                <div class="custom-card fade-in-section" style="transition-delay: 700ms;"><img src="assets/img/IMG-20201218-WA0027.jpg" alt="Kenangan 15"></div>
+                <div class="custom-card fade-in-section" style="transition-delay: 700ms;"><img src="assets/img/IMG-20210723-WA0081.jpg" alt="Kenangan 16"></div>
+                <div class="custom-card fade-in-section" style="transition-delay: 700ms;"><img src="assets/img/IMG-20210606-WA0018.jpg" alt="Kenangan 17"></div>
+                <div class="custom-card fade-in-section" style="transition-delay: 700ms;"><img src="assets/img/20191023_174743.jpg" alt="Kenangan 18"></div>
+                <div class="custom-card fade-in-section" style="transition-delay: 700ms;"><img src="assets/img/20191106_190420.jpg" alt="Kenangan 19"></div>
+                <div class="custom-card fade-in-section" style="transition-delay: 700ms;"><img src="assets/img/20200826_060023.jpg" alt="Kenangan 20"></div>
             </div>
         </section>
         
@@ -360,8 +373,16 @@
             const carouselImages = [
                 'assets/img/IMG-20230205-WA0003.jpg',
                 'assets/img/IMG-20201115-WA0000.jpg',
-                'assets/img/IMG-20201115-WA0004.jpg',
-                'assets/img/IMG-20201028-WA0038.jpg'
+                'assets/img/Untitled.gif',
+                'assets/img/IMG-20201028-WA0038.jpg',
+                'assets/img/20200304_203525.jpg',
+                'assets/img/20191106_184906.jpg',
+                'assets/img/20200222_214506.jpg',
+                'assets/img/IMG-20210723-WA0081.jpg',
+                'assets/img/IMG-20210606-WA0018.jpg',
+                'assets/img/20191023_174743.jpg',
+                'assets/img/20191106_190420.jpg',
+                'assets/img/20200826_060023.jpg'
             ];
             let currentImageIndex = 0;
 
